<resources>
    <string name="invalid_context">Invalid list name</string>
    <string name="invalid_project">Invalid tag name</string>
    <string name="app_label">Simpletask</string>
    <string name="added_task">Added task</string>
    <string name="add_task_failed">Could not add task</string>
    <string name="save_task">Save task</string>
    <string name="update_task_failed">Could not update task</string>
    <string name="sort">Sort</string>
    <string name="script">Script</string>
    <string name="filter">Filter</string>
    <string name="main_no_items">No tasks to display.</string>
    <string name="set_preferences">Settings</string>
    <string name="preferences">Settings</string>
    <string name="archive">Archive</string>
    <string name="help">Help</string>
    <string name="history">History</string>
    <string name="debug_info">Debugging info</string>
    <string name="log">Log</string>
    <string name="next">Next</string>
    <string name="prev">Previous</string>
    <string name="open_file">Open todo file</string>
    <string name="sync">Refresh</string>
    <string name="changelist">Select list</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="task">Task</string>
    <string name="addtask">Add Task</string>
    <string name="updatetask">Update</string>
    <string name="viewtask">View Task</string>
    <string name="cleartask">Clear Task</string>
    <string name="clear_database">Empty database</string>
    <string name="done">Complete</string>
    <string name="priority">Prioritize</string>
    <string name="select_priority">Select priority</string>
    <string name="select_all">Select all</string>
    <string name="add_list_or_tag">Add lists and tags</string>
    <string name="update_lists">Update lists</string>
    <string name="update_tags">Update tags</string>
    <string name="remove_list_or_tag">Remove lists and tags</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="defer_due">Set due date(s)</string>
    <string name="defer_threshold">Set threshold date(s)</string>
    <string name="insert_due">Insert due date</string>
    <string name="insert_threshold">Insert threshold date</string>
    <string name="share">Share</string>
    <string name="share_database">Share database</string>
    <string name="unComplete">Undo complete</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="clear_filter">Clear filter</string>
    <string name="write_failed">Failed writing the file!. Your changes were NOT saved.</string>
    <string name="tasktexthint">\@Discuss +Paris issue with +Hector @Troy\nTell +Hector to not be such a drag @Troy\nReview +Simpletask settings to remove this text @Phone</string>
    <string name="filter_name_empty">No name specified, not adding filter</string>
    <string name="widget_name_empty">No widget name specified, not adding widget</string>
    <string name="add_task_help">Add or update a task to the task list. When adding tasks,
        each line is a separate task for quick adding.\n
        <b>Priority</b>\n
        start the line with (.), like (A)\n
        <b>Tags</b>
        start with a + sign, like +Kitchen\n
        <b>Lists</b>
        start with an @ sign, like @home\n
        A task can include any number of tags or be on multiple
        lists.
    </string>
    <string name="preference_appearance">Appearance</string>
    <string name="preference_interface">Interface</string>
    <string name="preference_widget">Widget</string>
    <string name="preference_other">Other</string>
    <string name="ARCHIVE_settings_header">Archive</string>
    <string name="ARCHIVE_settings_summary">Settings for archiving completed tasks in done.txt</string>
    <string name="auto_archive_pref_title">Auto archive</string>
    <string name="auto_archive_pref_summary">Automatically archive tasks to done.txt on completion.</string>
    <string name="archive_now_pref_title">Archive now</string>
    <string name="archive_now_pref_summary">Move completed tasks from todo.txt to done.txt.</string>
    <string name="dropbox_logout_pref_title">Log out</string>
    <string name="dropbox_logout_pref_summary">Log out of Dropbox.</string>
    <string name="dropbox_sync_interval_title">Background sync interval</string>
    <string name="dropbox_sync_interval_title_summary">Synchronize the todo file with Dropbox every %s seconds. Setting this to 0 disables automatic sync.</string>
    <string name="TODOTXTPATH_title">File location</string>
    <string name="TODOTXTPATH_summary">The Dropbox folder where todo.txt is stored.</string>
    <string name="TODOTXTPATH_defaultPath">/todo</string>
    <string name="DROPBOX_settings_header">Dropbox</string>
    <string name="DROPBOX_settings_summary">Settings for Dropbox synchronisation</string>
    <string name="todotxt_features_settings_header">Features</string>
    <string name="todotxt_features_settings_summary">Enable or disable features</string>
    <string name="todotxt_configuration_settings_header">Configuration</string>
    <string name="todotxt_configuration_settings_summary">Configure app behavior</string>
    <string name="todotxt_creation_settings_header">Task Creation</string>
    <string name="todotxt_ui_settings_header">User Interface</string>
    <string name="todotxt_ui_settings_summary">Control what is being displayed</string>
    <string name="todotxt_behavior_settings_header">Behavior</string>
    <string name="todotxt_settings_summary">Application wide settings</string>
    <string name="sort_complete_last_pref_title">Show completed last</string>
    <string name="sort_complete_last_pref_summary">Always display the completed tasks at the bottom of the list
    </string>
    <string name="keep_prio_header">Prio in completed tasks</string>
    <string name="keep_prio_summary">Keep priorities in completed tasks. disable this to restore the todo.txt app behavior, which removes the priority when completing a task.</string>
    <string name="prepend_date_pref_title">Date new tasks</string>
    <string name="prepend_date_pref_summary">Automatically add creation date to new tasks.</string>
    <string name="line_breaks_pref_title">Windows line breaks</string>
    <string name="line_breaks_pref_summary">Use Windows-friendly line breaks in the text file.</string>
    <string name="recur_from_original_date_pref_title">Recur task using original dates</string>
    <string name="recur_from_original_date_pref_summary">Increase the original dates in the task when creating the recurring task.
        Un-check this to set the new dates relative to today.</string>
    <string name="swipe_complete_pref_title">Swipe to complete</string>
    <string name="swipe_complete_pref_summary">Swipe over a task to complete it.</string>
    <string name="manual_sync_pref_title">Manual sync</string>
    <string name="manual_sync_pref_summary">Don\'t automatically upload every change to Dropbox.</string>
    <string name="resume_sync_pref_title">Resume sync</string>
    <string name="resume_sync_pref_summary">Sync with dropbox when opening app.</string>
    <string name="font_size_delta_pref_title">Font size</string>
    <string name="font_size_delta_pref_summary">Change the font size.</string>
    <string name="theme_pref_title">Theme</string>
    <string name="theme_pref_summary">Change the theme used for the application.</string>
    <string name="share_task_show_edit_pref_title">Edit shared task</string>
    <string name="share_task_show_edit_summary">Allow editing of a shared task before saving it.
            Disable this to have the shared task stored without intervention.</string>
    <string name="share_task_append_text_title">Background tag</string>
    <string name="share_task_append_text_summary">Append text \"%s\" to tasks added in the background. For example setting \"+background\" will allow easy filtering to edit/review background added tasks.</string>
    <string name="local_file_root_title">File link root</string>
    <string name="local_file_root_summary">Resolve root://.... links from %s.</string>
    <string name="capitalize_tasks_pref_title">Capitalize new tasks</string>
    <string name="back_saves_pref_title">Back button</string>
    <string name="back_saves_summary">Save the entered todos or apply the filter when pressing back.</string>
    <string name="show_txt_only_pref_title">Show txt files only</string>
    <string name="show_txt_only_summary">Only show .txt files in the file selection dialog.</string>
    <string name="calendar_sync_screen_title">Calendar reminders</string>
    <string name="calendar_sync_screen_summary">Automatically create calendar reminders for due and/or threshold dates.</string>
    <string name="calendar_sync_dues_title">Due dates</string>
    <string name="calendar_sync_thresholds_title">Threshold dates</string>
    <string name="calendar_reminder_days_title">Remind in advance</string>
    <string name="calendar_reminder_days_summary">How many days before the due/threshold date should the reminder be set.</string>
    <string name="calendar_reminder_time_title">Reminders time</string>
    <string name="calendar_reminder_time_summary">At what time of day should the reminder be set.</string>
    <string name="drawer_fixed_landscape_title">Open landscape drawers</string>
    <string name="drawer_fixed_landscape_summary">Always open the drawers in landscape mode.</string>
    <string name="widget_theme_pref_title">Theme</string>
    <string name="widget_theme_pref_summary">Change the theme used for the widgets.</string>
    <string name="task_text_ellipsizing_pref_title">Task text ellipsizing</string>
    <string name="append_tasks_at_end_title">Append new tasks</string>
    <string name="append_tasks_at_end_summary">Append new tasks at the end of the todo file. When disabled, new tasks are inserted at the beginning.</string>
    <string name="sort_case_sensitive_title">Sort case-sensitive</string>
    <string name="sort_case_sensitive_summary">Observe case when sorting lists, tags and saved filters.</string>
    <string name="use_create_backup_title">Create is threshold</string>
    <string name="use_create_backup_summary">When sorting, use the task creation date as threshold date if no threshold date is set.</string>
    <string name="about_settings_header">About</string>
    <string name="visit_website_title">Help</string>
    <string name="visit_website_summary">Visit the Simpletask website</string>
    <string name="visit_website_data">http://mpcjanssen.nl/pages/simpletask.html</string>
    <string name="visit_tracker_title">Request a feature or log a bug</string>
    <string name="visit_tracker_summary">Request a new feature or enhancement or report a problem.</string>
    <string name="visit_tracker_data">http://mpcjanssen.nl/redmine/projects/simpletask-android/issues/</string>
    <string name="add_filter_shortcut">To homescreen</string>
    <string name="rename_filter">Rename</string>
    <string name="filter_show_completed">Show completed tasks</string>
    <string name="filter_show_future">Show tasks with threshold date in future</string>
    <string name="filter_show_lists">Show lists in the tasks</string>
    <string name="filter_show_tags">Show tags in the tasks</string>
    <string name="donate_title">Donate</string>
    <string name="donate_summary">Donate if you like simpletask. NOTE: Donation is voluntary, simpletask will always be free.  </string>
    <string name="donated_summary">Thanks for your donation.  </string>
    <string name="share_history">View and share the internal todo.txt history database for recovery.</string>
    <string name="share_history_title">Todo history</string>
    <string name="experimental_title">Experimental</string>
    <string name="experimental_summary">Enable experimental features</string>
</resources>