<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
        android:fragment="nl.mpcjanssen.simpletask.PreferencesActivity$AppearancePrefFragment"
        android:title="@string/preference_appearance" />
    <header
        android:fragment="nl.mpcjanssen.simpletask.PreferencesActivity$InterfacePrefFragment"
        android:title="@string/todotxt_ui_settings_header"
        android:summary="@string/todotxt_ui_settings_summary"/>
    <header
        android:fragment="nl.mpcjanssen.simpletask.PreferencesActivity$FeaturesPrefFragment"
        android:title="@string/todotxt_features_settings_header"
        android:summary="@string/todotxt_features_settings_summary"/>
    <header
        android:fragment="nl.mpcjanssen.simpletask.PreferencesActivity$ConfigurationPrefFragment"
        android:title="@string/todotxt_configuration_settings_header"
        android:summary="@string/todotxt_configuration_settings_summary"/>
    <header
        android:fragment="nl.mpcjanssen.simpletask.PreferencesActivity$WidgetPrefFragment"
        android:title="@string/preference_widget" />
    <header
        android:fragment="nl.mpcjanssen.simpletask.PreferencesActivity$CalendarPrefFragment"
        android:title="@string/calendar_sync_screen_title" />
    <header
        android:fragment="nl.mpcjanssen.simpletask.PreferencesActivity$OtherPrefFragment"
        android:title="@string/preference_other" />

    <header
        android:fragment="nl.mpcjanssen.simpletask.PreferencesActivity$DonatePrefFragment"
        android:title="@string/donate_title" />
</preference-headers>