<?xml version="1.0" encoding="utf-8"?>

<!--
This file is part of Todo.txt Touch, an Android app for managing your todo.txt file (http://todotxt.com).

Copyright (c) 2009-2012 Todo.txt contributors (http://todotxt.com)

LICENSE:

Todo.txt Touch is free software: you can redistribute it and/or modify it under the terms of the GNU General Public
License as published by the Free Software Foundation, either version 2 of the License, or (at your option) any
later version.

Todo.txt Touch is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied
warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
details.

You should have received a copy of the GNU General Public License along with Todo.txt Touch.  If not, see
<http://www.gnu.org/licenses/>.

@author Todo.txt contributors <todotxt@yahoogroups.com>
@license http://www.gnu.org/licenses/gpl.html
@copyright 2009-2012 Todo.txt contributors (http://todotxt.com)
-->

<!--suppress ALL -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/update"
            android:title="@string/update"
            android:icon="@drawable/ic_edit_white_24dp"
            app:showAsAction="always"/>
    <item
            android:id="@+id/update_lists"
            android:title="@string/update_lists"
            android:icon="@drawable/ic_list_white_24dp"
            app:showAsAction="always"/>
    <item
            android:id="@+id/update_tags"
            android:title="@string/update_tags"
            android:icon="@drawable/ic_label_outline_white_24dp"
            app:showAsAction="always"/>
    <item
            android:id="@+id/priority"
            android:title="@string/priority"
            android:icon="@drawable/ic_star_border_white_24dp"
            app:showAsAction="always"/>
    <item
            android:id="@+id/defer_due"
            android:title="@string/defer_due"
            android:icon="@drawable/ic_schedule_white_24dp"
            app:showAsAction="always"/>
    <item
            android:id="@+id/defer_threshold"
            android:title="@string/defer_threshold"
            android:icon="@drawable/ic_clock_start_white_24dp"
            app:showAsAction="always"/>
    <item
            android:id="@+id/complete"
            android:title="@string/done"
            app:showAsAction="never"/>
    <item
            android:id="@+id/uncomplete"
            android:title="@string/unComplete"
            app:showAsAction="never"/>
</menu>
