<?xml version="1.0" encoding="utf-8"?>

<!--
This file is part of Todo.txt Touch, an Android app for managing your todo.txt file (http://todotxt.com).

Copyright (c) 2009-2012 Todo.txt contributors (http://todotxt.com)

LICENSE:

Todo.txt Touch is free software: you can redistribute it and/or modify it under the terms of the GNU General Public
License as published by the Free Software Foundation, either version 2 of the License, or (at your option) any
later version.

Todo.txt Touch is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied
warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
details.

You should have received a copy of the GNU General Public License along with Todo.txt Touch.  If not, see
<http://www.gnu.org/licenses/>.

@author Todo.txt contributors <todotxt@yahoogroups.com>
@license http://www.gnu.org/licenses/gpl.html
@copyright 2009-2012 Todo.txt contributors (http://todotxt.com)
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:title="@string/filter"
            android:id="@+id/filter"
            android:orderInCategory="2"
            android:icon="@drawable/ic_action_content_filter_list"
            app:showAsAction="always" />

    <item
            android:title="@string/search"
            android:id="@+id/search"
            android:icon="@drawable/action_search"
            app:showAsAction="ifRoom|collapseActionView"
            app:actionViewClass="android.widget.SearchView" />
    <item
            android:title="@string/share"
            app:showAsAction="ifRoom"
            android:icon="@drawable/share"
            android:id="@+id/share" />
    <item
        android:title="@string/preferences"
        app:showAsAction="never"
        android:id="@+id/preferences" />
    <item
        android:title="@string/archive"
        app:showAsAction="never"
        android:id="@+id/archive" />
    <item
        android:title="@string/help"
        app:showAsAction="never"
        android:orderInCategory="1"
        android:id="@+id/help" />
</menu>
