<?xml version="1.0" encoding="utf-8"?><!--suppress ALL -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="?android:attr/dividerVertical"
    android:showDividers="middle"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical">

    <CheckBox 
        android:id="@+id/cb_show_completed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_show_completed" />

    <CheckBox
        android:id="@+id/cb_show_future"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_show_future" />


    <CheckBox
        android:id="@+id/cb_show_lists"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_show_lists" />

    <CheckBox
        android:id="@+id/cb_show_tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_show_tags" />
    <EditText
        android:id="@+id/txt_javascript"
        android:layout_width="match_parent"
        android:inputType="textMultiLine"
        android:gravity="top|left"
        android:visibility="gone"
        android:layout_height="fill_parent" />
</LinearLayout>
